# template-typer

./: README.md  pyproject.toml  readme.md
.github/workflows/: ci.yml
template_typer/: cli.py
