[tool.poetry]
name = "template-typer"
version = "0.1.0"
description = ""
authors = ["Henryk Konsek <hekonsek@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
template-typer = "template_typer.cli:main"