[tool.poetry]
name = "template-typer"
version = "0.1.0"
description = ""
authors = ["Henryk Konsek <hekonsek@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.13.1"
termcolor = "^2.5.0"


[tool.poetry.group.dev.dependencies]
check-dependencies = {git = "https://github.com/hekonsek/check-dependencies.git", rev = "v0.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
template-typer = "template_typer.cli:main"