[tool.poetry]
name = "template-typer"
version = "0.1.0"
description = ""
authors = ["Henryk Konsek <hekonsek@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.4"
termcolor = "^3.1.0"


[tool.poetry.group.dev.dependencies]
check-depz = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
template-typer = "template_typer.cli:main"